# PhyPatClassProb

./: .gitignore  Makefile.am  README.txt  config.h.in  configure.ac  pattern_class.bib
doc/: pattern_class_prob.tex  plos_currents_tol.html
doc/snippets/: Fitch.html  Fitch.tex  Fitch.tiff  latex-image-1.tiff  snippets.tex
images/: downpass-symmetry.ai  poster-2013.tex  poster-2014.tex  poster-April-2012.tex
src/: .gitignore  Makefile.am  Uninformative_case.cpp  cruft.c  phy-pat-class-prob.cpp  phy-pat-class-prob.hpp  wrapPhyPatClassProb.py
test/: .gitignore  FilereadTest.py  ParsedPaup.py  ParsedPaup.txt  SameOutput.py  SumCode.py  SumUninf.py  all2.nex  all3.nex  all6.nex  all_rerootings.py  allpatout.txt  allpats.nex  generate_test.py  ourOutput.txt  our_prob.py  parse_paup_out.py  paupSummary.txt  paupsitelikes  run_test.sh  testnex.py  waddellTemplate.nex  waddellTestScript.py
test/benchmarking/: from_jasper_benchmarks.txt  gen_data_set.py  oldresults.csv  p10.err.txt  p10.nex  p10.out.txt  p11.err.txt  p11.nex  p11.out.txt  p3.err.txt  p3.nex  p3.out.txt  p4.err.txt  p4.nex  p4.out.txt  p5.err.txt  p5.nex  p5.out.txt  p6.err.txt  p6.nex  p6.out.txt  p7.err.txt  p7.nex  p7.out.txt  p8.err.txt  p8.nex  p8.out.txt  p9.err.txt  p9.nex  p9.out.txt  plot_benchmarks.R  rag1wMLTreeOutput.txt  results.csv  results.txt  run_test.sh  s10.err.txt  s10.nex  s10.out.txt  s11.err.txt  s11.nex  (+23 more)
test/waddellEtAl/: rag1wMLTree.nex  rag1wMLTreeOutput.txt
